Added preloading of profile picture

--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!--The line below preloads the profile picture that is used in App.js-->
+    <link rel="preload" as="image" href="%PUBLIC_URL%/profilepicture.webp" />
 
-    <link rel="preload" as="image" href="%SRC_URL%/profilepicture.webp" />
     <title>Daniel Navarro</title>
   </head>
   <body>
