Added preview image and description for links

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en" class="scroll-smooth" prefix="og: http://ogp.me/ns#">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -9,6 +9,10 @@
       name="description"
       content="Personal Portfolio"
     />
+    <meta name ="image" property="og:image" content="%PUBLIC_URL%/previewImage.PNG" />
+    <meta name ="author" content="Daniel Navarro" />
+    <meta property="og:description" content="Daniel Navarro Personal Portfolio" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
